@@ -111,9 +111,12 @@ class Command(Enum):
     SEND_TRANSFER_INFO = "SEND_TRANSFER_INFO"
     STOP_TRANSFER = "STOP_TRANSFER"
 
-    # Compatibility, PREPARED will be changed to READY
-    SET_PRINTER_READY = "SET_PRINTER_PREPARED"
-    CANCEL_PRINTER_READY = "CANCEL_PRINTER_PREPARED"
+    SET_PRINTER_READY = "SET_PRINTER_READY"
+    CANCEL_PRINTER_READY = "CANCEL_PRINTER_READY"
+
+    # Compatibility, PREPARED is deprecated
+    SET_PRINTER_PREPARED = "SET_PRINTER_PREPARED"
+    CANCEL_PRINTER_PREPARED = "CANCEL_PRINTER_PREPARED"
 
     LOAD_FILAMENT = "LOAD_FILAMENT"
     UNLOAD_FILAMENT = "UNLOAD_FILAMENT"
