@@ -18,6 +18,7 @@ ChangeLog
     * 403 response handling change
     * Add sheet settings and mbl data
     * Add Transfer ID as a 64-bit int
+    * Added new SET_PRINTER_READY / CANCEL_PRINTER_READY cmds
 
 0.6.0 (2021-12-17)
     * Introduce `const.State.PREPARED`
